fix: row overflow menu svg fill and spacing

--- a/src/components/data-table-v2/_data-table-v2-core.scss
+++ b/src/components/data-table-v2/_data-table-v2-core.scss
@@ -413,19 +413,6 @@ DATA TABLE VARIATIONS
     tr:hover .#{$prefix}--overflow-menu svg {
       opacity: 1;
     }
-
-    .#{$prefix}--overflow-menu-options-icon {
-      margin-right: rem(8px);
-      vertical-align: middle;
-    }
-
-    .#{$prefix}--overflow-menu-options-icon + span {
-      vertical-align: middle;
-    }
-
-    .st0 {
-      fill: none;
-    }
   }
 
   //================================================
